# PSC

./: .gitignore  Cargo.toml  HEADER-GPL3  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: Ethereum_JSON-RPC.postman_collection.json  substrate_and_evm_address_on_psc.md  test_guide.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/res/: 2053-genesis-state  2053-genesis-wasm  psc-raw.json
pallets/assets/: Cargo.toml
pallets/assets-bridge/: Cargo.toml  README.md
pallets/assets-bridge/src/: abi.rs  lib.rs  mock.rs  recover.rs  tests.rs
pallets/assets/src/: benchmarking.rs  extra_mutator.rs  functions.rs  impl_fungibles.rs  impl_stored_map.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: impls.rs  lib.rs  xcm_config.rs
runtime/omnichain/: Cargo.toml  build.rs
runtime/omnichain/src/: constants.rs  lib.rs  xcm_config.rs
runtime/omnichain/src/weights/: mod.rs
runtime/omnichain/src/weights/xcm/: mod.rs
runtime/omnichain/tests/: tests.rs
runtime/psc/: Cargo.toml  build.rs
runtime/psc/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/psc/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  extrinsic_weights.rs  frame_system.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_session.rs  pallet_timestamp.rs  pallet_utility.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/psc/src/weights/xcm/: cumulus_pallet_xcmp_queue.rs  mod.rs  pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
runtime/psc/tests/: tests.rs
runtime/test-utils/: Cargo.toml
runtime/test-utils/src/: lib.rs
scripts/: local-test.txt
scripts/js/: README.md  package.json  psc-contributors.json
scripts/js/src/: evm_to_dot.js  get_contributors.js
zombienet/: omnichain-local-launch.sh  omnichain-small-network.toml  psc-local-launch-podman.sh  psc-local-launch.sh  psc-small-network.toml
