[package]
name = "pallet-ethereum-chain-id"
version = "1.3.0"
authors = ["The Polkadot Smart Chain Authors and ChainX Authors"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
]
